--- a/Easy/Cube.html
+++ b/Easy/Cube.html
@@ -717,25 +717,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i258.image.css:image/base/css*/
 #i258 { opacity: 1; }
 /*#/#*//*#i258.i259.positioning.css:positioning/base/css.2*/
-#i258 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 46px;
-        -ms-transform: translate(0, 0) translate(112px, 171px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(112px, 171px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(112px, 171px) rotate(0deg);
-        transform: translate(0, 0) translate(112px, 171px) rotate(0deg);
+#i258 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
+        -ms-transform: translate(0, 0) translate(114px, 184px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(114px, 184px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(114px, 184px) rotate(0deg);
+        transform: translate(0, 0) translate(114px, 184px) rotate(0deg);
 }
 /*#/#*//*#i5.i268.image.css:image/base/css*/
 #i268 { opacity: 1; }
 /*#/#*//*#i268.i269.positioning.css:positioning/base/css.2*/
 #i268 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 152px; height: 68px;
-        -ms-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-}
-/*#/#*//*#i5.i276.image.css:image/base/css*/
-#i276 { opacity: 1; }
-/*#/#*//*#i276.i277.positioning.css:positioning/base/css.2*/
-#i276 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 152px; height: 68px;
         -ms-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
@@ -864,11 +855,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i230.image.html:image/html-->
 <img id="i230" src="https://i.imgur.com/hKbxX39.png"/>
 <!--#/#--><!--#i5.i258.image.html:image/html-->
-<img id="i258" src="https://i.imgur.com/EIppdn8.png"/>
+<img id="i258" src="https://i.imgur.com/KN5P4mj.gif"/>
 <!--#/#--><!--#i5.i268.image.html:image/html-->
 <img id="i268" src="https://i.imgur.com/Qfldi1M.png"/>
-<!--#/#--><!--#i5.i276.image.html:image/html-->
-<img id="i276" src="https://i.imgur.com/Qfldi1M.png"/>
 <!--#/#--><!--#i5.i264.image.html:image/html-->
 <img id="i264" src="https://i.imgur.com/3aX4YHt.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -981,23 +970,6 @@ var el = document.getElementById('i268');
 
 el.addEventListener('click', function(e){
     /*#i270.i271.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/pJqpVjGrNroktsZ27'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i5.i276.image.js:image/base/js*/
-
-/*#/#*//*#i276.i277.positioning.js:positioning/base/js.2*/
-bmShow('i276');
-/*#/#*//*#i276.i278.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i276');
-
-el.addEventListener('click', function(e){
-    /*#i278.i279.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/pJqpVjGrNroktsZ27'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -1135,11 +1107,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i268.i269.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i276.image.meta:image/meta*/
-name: CTA copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i276.i277.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i264.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
