--- a/Easy/Venetian.html
+++ b/Easy/Venetian.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>HTML5 STUDIO BUILDER: Venetian v 1.5</title>
-<meta charset="UTF-8">
+
 <!-- Adform API Script -->
 <script type="text/javascript">
 document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv='+ Math.random()) +'"><\/script>');
@@ -2197,30 +2197,30 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i62.image.css:image/base/css*/
 #i62 { opacity: 1; }
 /*#/#*//*#i62.i63.positioning.css:positioning/base/css.2*/
-#i62 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
-        -ms-transform: translate(0, 0) translate(132px, 393px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(132px, 393px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(132px, 393px) rotate(0deg);
-        transform: translate(0, 0) translate(132px, 393px) rotate(0deg);
+#i62 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 46px;
+        -ms-transform: translate(0, 0) translate(132px, 406px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(132px, 406px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(132px, 406px) rotate(0deg);
+        transform: translate(0, 0) translate(132px, 406px) rotate(0deg);
 }
 /*#/#*//*#i64.image.css:image/base/css*/
 #i64 { opacity: 1; }
 /*#/#*//*#i64.i65.positioning.css:positioning/base/css.2*/
-#i64 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 480px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 480px;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i68.shape.css:shape/base/css*/
 #i68 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 99.79166666666667%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2309,7 +2309,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/Qfldi1M.png"/>
 <!--#/#--><!--#i62.image.html:image/html-->
-<img id="i62" src="https://i.imgur.com/EIppdn8.png"/>
+<img id="i62" src="https://i.imgur.com/KN5P4mj.gif"/>
 <!--#/#--><!--#i64.image.html:image/html-->
 <img id="i64" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i68.shape.html:shape/html-->
