--- a/Easy/Cube.html
+++ b/Easy/Cube.html
@@ -837,7 +837,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡No te pierdas todas estas ofertas para tu hogar!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/lNEEpb8.jpg"/>
+<img id="i130" src="https://i.imgur.com/Wdr0FhD.png"/>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
 <img id="i190" src="https://i.imgur.com/3aX4YHt.png"/>
 <!--#/#--><!--#i4.i186.image.html:image/html-->
