--- a/Easy/Venetian.html
+++ b/Easy/Venetian.html
@@ -2289,7 +2289,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/AtWmrPo.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/q9tSc6o.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/c8J6713.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
