--- a/Easy/Cube.html
+++ b/Easy/Cube.html
@@ -802,7 +802,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
-#i99 { background-color: #dedede; opacity: 0.00;
+#i99 { background-color: #ffffff; opacity: 0.00;
 }
 /*#/#*//*#i179.i180.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i99 { cursor: pointer; }
