--- a/SEPHORA/Venetian_Antara.html
+++ b/SEPHORA/Venetian_Antara.html
@@ -2358,7 +2358,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i99.image.html:image/html-->
 <img id="i99" src="https://i.imgur.com/vrQ4ebH.gif"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Del 17 al 20 de octubre, SEPHORA Antara te da la bienvenida, ¡Sorpréndete con un increíble look de maquillaje!</div>
+<div id="i68">Del 17 al 20 de octubre SEPHORA Antara te da la bienvenida, ¡Sorpréndete con un increíble look de maquillaje!</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">#MOVIMIENTOSEPHORAMX</div>
 <!--#/#--><!--#i113.image.html:image/html-->
