--- a/Crunch/Venetian300x600.html
+++ b/Crunch/Venetian300x600.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
 
@@ -2264,7 +2265,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">¡Lánzate a participar!</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Podrás ganar hasta $10,000 pesos! 
+<div id="i12">¡Podrás ganar hasta $10,000 pesos! 
 No olvides etiquetar a @crunch_mx y usar 
 el HT #MiCrunchEs</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
