--- a/Crunch/Venetian300x600.html
+++ b/Crunch/Venetian300x600.html
@@ -2273,7 +2273,7 @@ el HT #MiCrunchEs</div>
     <!--#i2.i72.slice-image.html:slice-image/html.1-->
 <dataimg id="i72" src="https://i.imgur.com/Vj11xVW.jpg"></dataimg>
 <!--#/#--><!--#i2.i73.slice-image.html:slice-image/html.1-->
-<dataimg id="i73" src="https://i.imgur.com/rpVxedQ.jpg"></dataimg>
+<dataimg id="i73" src="https://i.imgur.com/KXNPoEs.gif"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/bY67SbN.gif"></dataimg>
 <!--#/#-->
