--- a/Crunch/Cube.html
+++ b/Crunch/Cube.html
@@ -808,7 +808,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/U2e3yyZ.gif"/>
+<img id="i130" src="https://i.imgur.com/ZuJYf8S.gif"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡Lánzate a participar y podrás ganar hasta $10,000 pesos!</div>
 <!--#/#--><!--#i4.i280.image.html:image/html-->
@@ -822,7 +822,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
-<img id="i230" src="https://i.imgur.com/XbHhK0l.gif"/>
+<img id="i230" src="https://i.imgur.com/kxb1xym.gif"/>
 <!--#/#--><!--#i5.i276.text.html:text/html-->
 <div id="i276">¡Comparte eso que te hace único en Instagram!
 #MiCrunchEs</div>
