--- a/Analizar/Cube.html
+++ b/Analizar/Cube.html
@@ -463,10 +463,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     })(Adf = window.Adf || {});
 
 </script>
-<!--#/#--><!--#i8.font-google.head:font/font-google/head-->
-<!--#i8.i9.font-google.head:font-google/head-->
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
-<!--#/#-->
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
@@ -516,23 +512,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 274px; height: 51px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-}
 /*#/#*//*#i4.i280.image.css:image/base/css*/
 #i280 { opacity: 1; }
 /*#/#*//*#i280.i281.positioning.css:positioning/base/css.2*/
-#i280 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 39px;
-        -ms-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
+#i280 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 33px;
+        -ms-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+}
+/*#/#*//*#i4.i14.text.css:text/base/css*/
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 238px; height: 51px;
+        -ms-transform: translate(-50%, -50%) translate(4px, 73px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(4px, 73px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(4px, 73px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(4px, 73px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -558,8 +554,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i5.i290.image.css:image/base/css*/
-#i290 { opacity: 1; }
+/*#/#*//*#i5.i294.image.css:image/base/css*/
+#i294 { opacity: 1; }
+/*#/#*//*#i294.i295.positioning.css:positioning/base/css.2*/
+#i294 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 33px;
+        -ms-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+}
 /*#/#*//*#i5.i230.image.css:image/base/css*/
 #i230 { opacity: 1; }
 /*#/#*//*#i230.i231.positioning.css:positioning/base/css.1*/
@@ -698,21 +701,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i290.i291.positioning.css:positioning/base/css.2*/
-#i290 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 39px;
-        -ms-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-}
 /*#/#*//*#i5.i282.text.css:text/base/css*/
-#i282 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i282 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i282.i283.positioning.css:positioning/base/css.1*/
-#i282 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 258px; height: 75px;
-        -ms-transform: translate(-50%, -50%) translate(-8px, 77px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-8px, 77px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-8px, 77px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-8px, 77px) rotate(0deg);
+#i282 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 261px; height: 75px;
+        -ms-transform: translate(-50%, -50%) translate(1px, 80px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 80px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 80px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 80px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -747,15 +743,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(74px, 86px) rotate(0deg);
         transform: translate(0, 0) translate(74px, 86px) rotate(0deg);
 }
-/*#/#*//*#i6.i292.image.css:image/base/css*/
-#i292 { opacity: 1; }
-/*#/#*//*#i292.i293.positioning.css:positioning/base/css.2*/
-#i292 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 39px;
-        -ms-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-        transform: translate(0, 0) translate(160px, 210px) rotate(0deg);
-}
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.1*/
@@ -765,14 +752,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i6.i296.image.css:image/base/css*/
+#i296 { opacity: 1; }
+/*#/#*//*#i296.i297.positioning.css:positioning/base/css.2*/
+#i296 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 33px;
+        -ms-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(183px, 218px) rotate(0deg);
+}
 /*#/#*//*#i6.i288.text.css:text/base/css*/
-#i288 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i288 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i288.i289.positioning.css:positioning/base/css.1*/
-#i288 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 213px; height: 49px;
-        -ms-transform: translate(-50%, -50%) translate(-30px, 78px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-30px, 78px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-30px, 78px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-30px, 78px) rotate(0deg);
+#i288 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 219px; height: 49px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #ffffff; opacity: 0.00;
@@ -799,8 +795,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 </style>
 <!--#/#--></head>
 <body>
-<!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i8.font.html:font/html-->
-<!--#/#--><!--#i2.cube.html:cube/html.1-->
+<!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i2.cube.html:cube/html.1-->
 <div style="overflow: visible" id="i2" class="shape-holder">
     <div style="visibility: hidden" id="content-container">
         <!--#i2.i4.cube-panel.html:cube-panel/html-->
@@ -809,10 +804,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/vtNFrEY.jpg"/>
-<!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Nuestra experiencia y compromiso certifican nuestra calidad en cada uno de nuestros servicios.</div>
 <!--#/#--><!--#i4.i280.image.html:image/html-->
 <img id="i280" src="https://i.imgur.com/tyKM09U.png"/>
+<!--#/#--><!--#i4.i14.text.html:text/html-->
+<div id="i14">Nuestra experiencia y compromiso certifican nuestra calidad en cada uno de nuestros servicios.</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -821,12 +816,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i5.i290.image.html:image/html-->
-<img id="i290" src="https://i.imgur.com/tyKM09U.png"/>
+<!--#/#--><!--#i5.i294.image.html:image/html-->
+<img id="i294" src="https://i.imgur.com/tyKM09U.png"/>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
 <img id="i230" src="https://i.imgur.com/ozR7OIE.jpg"/>
 <!--#/#--><!--#i5.i282.text.html:text/html-->
-<div id="i282">Es momento de cuidar tu salud, recuerda que cuando previenes tienes mayores probabilidades de tener un buen estado de salud.</div>
+<div id="i282">Es momento de cuidarte, cuando previenes tienes mayores probabilidades de tener un buen estado de salud.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -837,10 +832,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i40"></div>
 <!--#/#--><!--#i6.i272.image.html:image/html-->
 <img id="i272" src="https://i.imgur.com/Qfldi1M.png"/>
-<!--#/#--><!--#i6.i292.image.html:image/html-->
-<img id="i292" src="https://i.imgur.com/tyKM09U.png"/>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/ahLfftI.jpg"/>
+<!--#/#--><!--#i6.i296.image.html:image/html-->
+<img id="i296" src="https://i.imgur.com/tyKM09U.png"/>
 <!--#/#--><!--#i6.i288.text.html:text/html-->
 <div id="i288">¡Ven a vernos a nuestra sede Gran Estación!</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -902,10 +897,10 @@ document.getElementById('i91').addEventListener('click', function(e){
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
      
-/*#/#*//*#i5.i290.image.js:image/base/js*/
+/*#/#*//*#i5.i294.image.js:image/base/js*/
 
-/*#/#*//*#i290.i291.positioning.js:positioning/base/js.2*/
-bmShow('i290');
+/*#/#*//*#i294.i295.positioning.js:positioning/base/js.2*/
+bmShow('i294');
 /*#/#*//*#i5.i230.image.js:image/base/js*/
 
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
@@ -937,12 +932,12 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i6.i292.image.js:image/base/js*/
-
-/*#/#*//*#i292.i293.positioning.js:positioning/base/js.2*/
-bmShow('i292');
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
+/*#/#*//*#i6.i296.image.js:image/base/js*/
+
+/*#/#*//*#i296.i297.positioning.js:positioning/base/js.2*/
+bmShow('i296');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
@@ -973,11 +968,7 @@ function bmHide(id) {
 
         setInterval(next, 5000);
 </script>
-<!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i8.font.meta:font/meta*/
-name: Web Font: Source Sans Pro; type: font-google; customName: ;
-/*#/#*//*#i8.i9.font-google.meta:font-google/meta*/
-family: Source Sans Pro;
-/*#/#*//*#i2.cube.meta:cube/meta.1*/
+<!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i2.cube.meta:cube/meta.1*/
 name: Cube;
 customName: 1;
 /*#/#*//*#i2.i4.cube-panel.meta:cube-panel/meta*/
@@ -991,15 +982,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i14.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i280.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i280.i281.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i14.text.meta:text/meta*/
+name: Texto; customName: 1;
+/*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -1010,10 +1001,10 @@ data: /*!*/{}/*!*/;
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i290.image.meta:image/meta*/
+/*#/#*//*#i5.i294.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i290.i291.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i294.i295.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i230.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1039,15 +1030,15 @@ name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i272.i273.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i292.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i292.i293.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i60.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i296.image.meta:image/meta*/
+name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i296.i297.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i288.text.meta:text/meta*/
 name: Texto; customName: 1;
