--- a/Analizar/Venetian320x480.html
+++ b/Analizar/Venetian320x480.html
@@ -2134,14 +2134,33 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
+/*#/#*//*#i87.image.css:image/base/css*/
+#i87 { opacity: 1; }
+/*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
+#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
+        -ms-transform: translate(0, 0) translate(0px, 369px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 369px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 369px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 369px) rotate(0deg);
+}
+/*#/#*//*#i89.shape.css:shape/base/css*/
+#i89 { background-color: #ffffff; opacity: 1;
+}
+/*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
+#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 19.375%;
+        -ms-transform: translate(0, 0) translate(0px, 304px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 304px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 304px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 304px) rotate(0deg);
+}
 /*#/#*//*#i7.text.css:text/base/css*/
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(16px, 388px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 388px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 388px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 388px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(16px, 329px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 329px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 329px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 329px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2155,14 +2174,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 380px;
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 320px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i16.image.css:image/base/css*/
+#i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 157px; height: 43px;
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 157px; height: 45px;
         -ms-transform: translate(0, 0) translate(164px, 436px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(164px, 436px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(164px, 436px) rotate(0deg);
@@ -2226,8 +2247,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i16.image.css:image/base/css*/
-#i16 { opacity: 1; }
 /*#/#*//*#i68.image.css:image/base/css*/
 #i68 { opacity: 1; }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
@@ -2242,10 +2261,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i82.i83.positioning.css:positioning/base/css.2*/
 #i82 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 480px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2253,22 +2272,26 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
+<!--#/#--><!--#i87.image.html:image/html-->
+<img id="i87" src="https://i.imgur.com/iH1Rru8.jpg"/>
+<!--#/#--><!--#i89.shape.html:shape/html-->
+<div id="i89"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Más de 1200 pruebas diagnósticas.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/h8kLuBA.jpg"></dataimg>
+<dataimg id="i72" src="https://i.imgur.com/gv4RpIv.jpg"></dataimg>
 <!--#/#--><!--#i2.i73.slice-image.html:slice-image/html.1-->
-<dataimg id="i73" src="https://i.imgur.com/HpkHqRu.jpg"></dataimg>
+<dataimg id="i73" src="https://i.imgur.com/IzfbGD0.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/krw3sEJ.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/KeP64Sk.jpg"></dataimg>
 <!--#/#--><!--#i2.i86.slice-image.html:slice-image/html.1-->
-<dataimg id="i86" src="https://i.imgur.com/MUHwxru.jpg"></dataimg>
+<dataimg id="i86" src="https://i.imgur.com/5nA0EwM.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/tyKM09U.png"/>
+<img id="i16" src="https://i.imgur.com/IYajfBe.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/tbm1zmk.png"/>
 <!--#/#--><!--#i82.shape.html:shape/html-->
@@ -2279,6 +2302,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 bmShow('i30');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
+/*#/#*//*#i87.image.js:image/base/js*/
+
+/*#/#*//*#i87.i88.positioning.js:positioning/base/js.2*/
+bmShow('i87');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2348,6 +2375,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i89.i90.positioning.js:positioning/base/js.2*/
+bmShow('i89');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2365,6 +2394,15 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i87.image.meta:image/meta*/
+name: MAP; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i87.i88.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i89.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i89.i90.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
 name: Más de 1200 pruebas diagnósticas.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
@@ -2373,15 +2411,15 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: h8kLuBA.jpg; fileId: ; sourceTypeId: externalUrl;
+name: gv4RpIv.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i73.slice-image.meta:slice-image/meta.1*/
-name: HpkHqRu.jpg; fileId: ; sourceTypeId: externalUrl;
+name: IzfbGD0.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: krw3sEJ.jpg; fileId: ; sourceTypeId: externalUrl;
+name: KeP64Sk.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i86.slice-image.meta:slice-image/meta.1*/
-name: MUHwxru.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 5nA0EwM.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
