--- a/Decathlon/formulario-def-portada.html
+++ b/Decathlon/formulario-def-portada.html
@@ -306,7 +306,7 @@
         }
 
         .bg.cover-3 {
-            background: url("gif");
+            background: url("https://i.imgur.com/CDKOMXx.gif");
             background-size: cover;
             
         }
