--- a/Decathlon/formulario-def-portada.html
+++ b/Decathlon/formulario-def-portada.html
@@ -657,7 +657,7 @@
                         <input type="checkbox" width="10"  name="condiciones" style="text-align: left; background-color: #a4061f" required="check"/>
                     </span>
 
-                     <input type="submit" name="bottom" style="margin-top: 8px; text-align: center; background-color:#fec601; color: #065282; border-radius: 3px; width: 200px; position: absolute; left: 50%; margin-left: -100px; cursor: pointer" value="¡Únete aquí gratis!">
+                     <input type="submit" name="bottom" style="margin-top: 8px; text-align: center; background-color:#fec601; color: #065282; border-radius: 3px; width: 200px; position: absolute; left: 50%; margin-left: -100px; cursor: pointer" value="¡ÚNETE AQUÍ GRATIS!">
                 </center>
                 </form>
             </div>
@@ -665,7 +665,7 @@
             <div class="FR red">
                 <center>
                 <span class="s-I" style="width: 300px; margin-left: -30px;"> 
-                    <img src="https://i.imgur.com/hhHSnc8.gif" style="height:450px; width: 310px;  text-decoration: none; border-radius:0px;
+                    <img src="https://i.imgur.com/6MKeMlb.gif" style="height:420px; width: 310px;  text-decoration: none; border-radius:0px;
     box-shadow:0 0 0px 0px #fff; margin-top: 20px;"></span>
 
                <!--  <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: 30px;">
@@ -673,9 +673,9 @@
                    <img src="https://i.imgur.com/yCw3aET.jpg" style="height:400px; width:300px; text-decoration: none; margin-left: -30px; margin-bottom: ">
                 </span>-->
 
-                <span class="s-III" style="margin-top: 50px;">
+                <span class="s-III" style="margin-top: 60px;">
                
-                    <input type="button" name="send" id="send" style="text-align: center; background-color:#e22532; color: white; border: none; border-radius: 2px; width: 230px; cursor: pointer; margin-left: 5px; margin-bottom: 40px" value="VISITA NUESTRA WEB">
+                    <input type="button" name="send" id="send" style="text-align: center; background-color:#fec601; color: white; border: none; border-radius: 2px; width: 230px; cursor: pointer; margin-left: 5px; margin-bottom: 40px" value="VISITA NUESTRA WEB">
                
                 </span>
                     </center>
